--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   hex: ^0.2.0
   pinenacl: ^0.5.1
   json_serializable: ^6.6.0
+  http: ^0.13.5
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
