--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: kadena_dart_sdk
-description: A new Flutter package project.
+description: A dart package for interacting with the Kadena blockchain.
 version: 1.0.0
-homepage:
+respository: https://github.com/Eucalyptus-Labs/kadena-quicksign-dart
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
