--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: kadena_dart_sdk
 description: A dart package for interacting with the Kadena blockchain.
 version: 2.0.0
-respository: https://github.com/Eucalyptus-Labs/kadena-quicksign-dart
+repository: https://github.com/Eucalyptus-Labs/kadena-quicksign-dart
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
