--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 2.3.1
 repository: https://github.com/Eucalyptus-Labs/KadenaDartSdk
 
 environment:
-  sdk: '>=3.0.1 <4.0.0'
+  sdk: ">=3.0.5 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
