--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -4,6 +4,10 @@ description: Installs dependencies
 runs:
   using: composite
   steps:
+    - name: Flutter upgrade
+      shell: bash
+      run: flutter upgrade
+
     # General Tests
     - name: Install packages
       shell: bash
